--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ fonttools==4.60.1
 kiwisolver==1.4.9
 matplotlib==3.10.7
 missingno==0.5.2
+narwhals==2.10.1
 numpy==2.3.4
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
+plotly==6.3.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
