--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,70 @@
-<<<<<<< HEAD
+altair==5.5.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.11.0
+attrs==25.4.0
+blinker==1.9.0
+cachetools==6.2.1
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
 et_xmlfile==2.0.0
+fastapi==0.121.1
 fonttools==4.60.1
+gitdb==4.0.12
+GitPython==3.1.45
+h11==0.16.0
+httptools==0.7.1
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
+MarkupSafe==3.0.3
 matplotlib==3.10.7
-missingno==0.5.2
-narwhals==2.10.1
+narwhals==2.11.0
 numpy==2.3.4
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
+patsy==1.0.2
 pillow==12.0.0
-plotly==6.3.1
+protobuf==6.33.0
+pyarrow==21.0.0
+pydantic==2.12.4
+pydantic_core==2.41.5
+pydeck==0.9.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
-scipy==1.16.2
-seaborn==0.13.2
+PyYAML==6.0.3
+referencing==0.37.0
+requests==2.32.5
+rpds-py==0.28.0
+scikit-learn==1.7.2
+scipy==1.16.3
 six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+starlette==0.49.3
+statsmodels==0.14.5
+streamlit==1.51.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.5.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.38.0
+watchdog==6.0.0
+watchfiles==1.1.1
+websockets==15.0.1
+xgboost==2.1.4
 xlrd==2.0.2
-=======
-# --- Backend API ---
-
-fastapi
-uvicorn[standard]
-pydantic
-
-# --- Frontend Dashboard ---
-
-streamlit
-requests
-
-# --- Data Science & Modeling ---
-
-pandas
-statsmodels
-matplotlib
-
-# --- Excel File Support ---
-
-openpyxl
-xlrd
->>>>>>> a4c6005 (Versión estable FastAPI v2.3)
