--- a/Dockerfile.streamlit
+++ b/Dockerfile.streamlit
@@ -21,5 +21,5 @@ ENV PORT=8080
 CMD ["streamlit", "run", "app.py", \
     "--server.port=8080", \
     "--server.address=0.0.0.0", \
-    "--server.enableCORS=false", \
+    # "--server.enableCORS=false", \
     "--browser.gatherUsageStats=false"]
